[package]
name = "socket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = {version = "8", default-features = false }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
amiquip = { version = "0.4", default-features = false }
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
redis = { version = "0.23.0", features = ["tokio-native-tls-comp", "aio"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
anyhow = "1.0.75"
